--- a/index2.html
+++ b/index2.html
@@ -5,17 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Obidxon</title>
+    <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>Obidxon</h1>
-        <br>
-        <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-        </ul>
-    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, iure minima molestiae mollitia natus numquam rerum ullam! A ab beatae ducimus et libero neque nisi quae quos sunt! Rerum, voluptatibus.</p>
+
 </body>
 </html>
